# LPCI

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
notebooks/: tutorial.ipynb
src/lpci/: __init__.py  evaluate.py  lpci.py
tests/: conftest.py  test_evaluate.py  test_lpci.py  test_third_party_estimators.py  test_tune.py
