[project]
name = "lpci"
version = "0.1.0"
description = "This is a package to implement the LPCI algorithm for a regression forecasting model."
authors = [
    {name = "Ben Seimon", email = "benjamin.seimon@bse.eu"},
    {name = "Ramon Talvi", email = "ramon.talvi@bse.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "panelsplit>=0.4.2,<0.5",
    "seaborn>=0.13.2,<0.14",
]

[project.optional-dependencies]
sklearn-quantile = ["sklearn-quantile>=0.0.30"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5,<7",
    "pytest>=8.0",
    "pylint>=3.3.1,<4",
    "black>=24.10.0,<25",
    "xgboost>=2.0",
    "catboost>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lpci"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
