[project]
name = "lpci"
version = "1.0.0"
description = "This is a package to implement the LPCI algorithm for a regression forecasting model."
authors = [
    {name = "Ben Seimon", email = "benjamin.seimon@bse.eu"},
    {name = "Ramon Talvi", email = "ramon.talvi@bse.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.0",
    "seaborn>=0.13.2,<0.14",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5,<7",
    "pytest>=8.0",
    "pylint>=3.3.1,<4",
    "black>=24.10.0,<25",
    "xgboost>=2.0",
    "catboost>=1.0",
    "panelsplit>=1",
    "sklearn-quantile>=0.0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lpci"]



[build-system]
requires = [
    "hatchling>=1.24",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

